// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkPhoneNumberInput should render correctly 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(129, 123, 143, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackground",
          "type": "ThemeAttrAndroid",
        }
      }
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "rgb(230, 228, 235)",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 4,
        }
      }
      testID={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          resizeMode="contain"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "rgb(243, 242, 245)",
                "height": 12,
                "marginEnd": 8,
                "width": 16,
              },
            ]
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              Object {},
            ]
          }
        >
          +44
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Object {
              "marginStart": 4,
            },
          ]
        }
      >
        
      </Text>
    </View>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`Android BpkPhoneNumberInput should render correctly with \`editable\` false 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(230, 228, 235, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
          "disabled",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackground",
          "type": "ThemeAttrAndroid",
        }
      }
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "rgb(230, 228, 235)",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 4,
        }
      }
      testID={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          resizeMode="contain"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "rgb(243, 242, 245)",
                "height": 12,
                "marginEnd": 8,
                "width": 16,
              },
            ]
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              Object {
                "color": "rgb(230, 228, 235)",
              },
            ]
          }
        >
          +44
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Object {
              "marginStart": 4,
            },
          ]
        }
      >
        
      </Text>
    </View>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;
